other-mpol/add-ndots/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: add-ndots
policies:
- ../add-ndots.yaml
resources:
- resource.yaml
results:
- kind: Pod
  patchedResources: patchedResource.yaml
  policy: add-ndots
  resources:
  - default/myapp-pod
  result: pass
  isMutatingPolicy: true
